--- a/src/css/App.css
+++ b/src/css/App.css
@@ -18,7 +18,7 @@ header h4{
   color: #ddd;
 }
 
-#contenedorP{
+.contenedorP{
   background-color: #fafafa;
   box-shadow: 1px 0px 2px 2px rgba(0,0,0,.2);
   margin: 70px 15px;
